# ddd-template

./: README.md  main.py  pyproject.toml
app/: __init__.py
app/domain/exceptions/: __init__.py  user_exceptions.py
app/domain/models/: user.py
app/domain/repositories/: user_repository.py
app/domain/use_cases/: __init__.py  create_user_use_case.py  get_user_use_case.py
app/infrastructure/adapters/: kafka_adapter.py  mysql_adapter.py
app/infrastructure/events/: base_event.py  user_events.py
app/infrastructure/events/publishers/: event_publisher.py
app/infrastructure/repositories/: user_repository.py
app/routes/: __init__.py  home_routes.py  user_routes.py
app/routes/schemas/: user_schemas.py
app/services/: user_service.py
